--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 /node_modules
 /.pnp
 .pnp.js
+node_modules/
+
+*package-lock.json
+*package.json
+.gitignore
 
 # testing
 /coverage
@@ -21,3 +26,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Local Netlify folder
+.netlify
